# gateway/gateway-controller/api/management-openapi.yaml
@@ -2943,6 +2943,14 @@ components:
       properties:
         code:
           type: string
+          enum:
+            - MTLS_ACCEPT_INHERITS_POOL
+            - MTLS_ACCEPT_UNNARROWED
+            - MTLS_AUTH_NOT_FIRST
+            - MTLS_THUMBPRINT_NORMALISED
+            - HEADER_CERT_BYPASS_ACTIVE
+            - TLS_VERIFY_HOSTNAME_DISABLED
+            - TLS_IDENTITY_EXPIRED
           example: MTLS_ACCEPT_INHERITS_POOL
         field:
           type: string
@@ -5422,6 +5430,11 @@ components:
       properties:
         code:
           type: string
+          enum:
+            - CLIENT_CA_IS_LEAF
+            - CLIENT_CA_NOT_YET_VALID
+            - CERT_EXPIRES_SOON
+            - IDENTITY_NO_CLIENTAUTH_EKU
           example: CLIENT_CA_IS_LEAF
         field:
           type: string
